[add] title h1 on the header

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
   <!-- Titolo -->
   <header>
-  
+    <h1>Meet Our Team</h1>
   </header>
   <!-- /Titolo-->
 
   <!-- Descrizione e Contatti -->
   <main>
-  
+    
   </main>
   <!-- /Descrizione e Contatti -->
 
