[add] class container-top, contain-botton and .contatti + 2 section with <p> and 6x div

--- a/index.html
+++ b/index.html
@@ -4,19 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/style.css">
+  
   <title>Floating Cards</title>
 </head>
 <body>
 
   <!-- Titolo -->
-  <header>
+  <header class="container-top">
+    
     <h1>Meet Our Team</h1>
+  
   </header>
   <!-- /Titolo-->
 
   <!-- Descrizione e Contatti -->
-  <main>
-    
+  <main class="container-bottom">
+
+    <section>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam maiores sequi quidem maxime similique incidunt quos earum eveniet dignissimos necessitatibus? Laborum quisquam omnis officiis cum illo minus nemo autem ex!</p>
+    </section>
+
+    <section>
+      <div class="contatti"></div>
+      <div class="contatti"></div>
+      <div class="contatti"></div>
+      <div class="contatti"></div>
+      <div class="contatti"></div>
+      <div class="contatti"></div>
+    </section>
+
   </main>
   <!-- /Descrizione e Contatti -->
 
